k8s-manifests/worker.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: worker
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
        - image: ghcr.io/immunoodle/data-portal-ingest-worker:main
          name: worker
          volumeMounts:
          - mountPath: /data
            name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: worker
