k8s-manifests/minio.yml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  type: ClusterIP
  ports:
  - name: api
    port: 9000
  - name: webui
    port: 9001
  selector:
    app: minio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image:  quay.io/minio/minio:RELEASE.2025-07-23T15-54-02Z
        args: ["server", "/data", "--console-address", ":9001"]
        ports:
        - containerPort: 9000
          name: api
        - containerPort: 9001
          name: webui
        volumeMounts:
        - name: storage
          mountPath: /data/
          subPath: data
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: minio
