k8s-manifests/redis.yml
# TODO - Setup TLS
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: redis:8
          name: redis
          args: ["--requirepass", "$(REDIS_AUTH)"]
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 10
          ports:
            - containerPort: 6379
              name: redis
