k8s-manifests/traefik.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      targetPort: web
    - name: websecure
      port: 443
      targetPort: websecure
  selector:
    app: traefik
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.5.4
          args:
            - --entrypoints.web.address=:80
            - --entryPoints.websecure.address=:443/tcp
            - --providers.kubernetesingress
            - --providers.kubernetesingress.disableclusterscoperesources
            - --providers.kubernetesingress.namespaces=immunoodle
            - --providers.file.filename=/opt/traefik-extra-config.yml
            - --log.level=INFO
            - --accesslog=true
            - --api.dashboard=false
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
          volumeMounts:
            - name: config
              mountPath: /opt/traefik-extra-config.yml
              subPath: traefik-extra-config.yml
      volumes:
        - name: config
          configMap:
            name: traefik-config
