k8s-manifests/data-portal.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-portal
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: data-portal-stripprefix@file
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/data-portal"
        backend:
          service:
            name: data-portal
            port:
              number: 3838
---
apiVersion: v1
kind: Service
metadata:
  name: data-portal
  labels:
    app: data-portal
spec:
  type: ClusterIP
  ports:
  - port: 3838
  selector:
    app: data-portal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-portal
  labels:
    app: data-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-portal
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      labels:
        app: data-portal
    spec:
      volumes:
      - name: crt-mount
        secret:
          secretName: root-ca-secret
          items:
          - key: ca.crt
            path: ca.crt
      containers:
        - image: ghcr.io/immunoodle/data-portal:sha-53e4f85
          volumeMounts:
          - name: crt-mount
            mountPath: "/etc/secrets"
          name: data-portal
          ports:
          - containerPort: 3838
            name: shiny
[root@immunoodle ~]#
