k8s-manifests/i-spi.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: i-spi
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: addslashbyredirect@file,i-spi-stripprefix@file
    cert-manager.io/cluster-issuer: intermediate-ca1-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/i-spi"
        backend:
          service:
            name: i-spi
            port:
              number: 3838
  tls:
  - hosts:
    - IMMUNOODLE_HOSTNAME
    secretName: cert-secret         
---
apiVersion: v1
kind: Service
metadata:
  name: i-spi
  labels:
    app: i-spi
spec:
  type: ClusterIP
  ports:
  - port: 3838
  selector:
    app: i-spi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: i-spi
  labels:
    app: i-spi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: i-spi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: i-spi
    spec:
      containers:
        - image: ghcr.io/immunoodle/i-spi:main
          name: i-spi
# FIXME
#          resources:
#            requests:
#              cpu: "6"
#            limits:
#              cpu: "10"
          ports:
          - containerPort: 3838
            name: shiny
