k8s-manifests/ispi.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ispi
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: I-SPI-stripprefix@file
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/I-SPI"
        backend:
          service:
            name: ispi
            port:
              number: 3838
---
apiVersion: v1
kind: Service
metadata:
  name: ispi
  labels:
    app: ispi
spec:
  type: ClusterIP
  ports:
  - port: 3838
  selector:
    app: ispi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ispi
  labels:
    app: ispi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ispi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ispi
    spec:
      containers:
        - image: ghcr.io/immunoodle/i-spi:main
          name: ispi
# FIXME
#          resources:
#            requests:
#              cpu: "6"
#            limits:
#              cpu: "10"
          ports:
          - containerPort: 3838
            name: shiny
